--- a/project/index.html
+++ b/project/index.html
@@ -15,8 +15,7 @@
                 <li><a href="">Über uns</a></li>
             </ul>
         </nav>
-
-        <!-- # TO DO: deinen Namen einfügen, dann Commit durchführen! -->
+<h2>Samuel Farfeleder</h2>
          
     </header>
 
