Good Commit Messages added

--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,13 @@
 
 
      <!-- Unnecessary Comment added: Good Morning 3BHITM!! -->
-
+ <ul>
+        <li>updated Style</li>
+        <li>fixed navigation</li>
+        <li>changed button colour</li>
+        <li>scroll bug fixed </li>
+        <li>fixed gameplay</li>
+    </ul>
 
     </main>
 
