--- a/project/index.html
+++ b/project/index.html
@@ -35,6 +35,13 @@
 
 
      <!-- Unnecessary Comment added: Good Morning 3BHITM!! -->
+  <ul>
+        <li>update coloure</li>
+        <li>fixing navigation</li>
+        <li>changed colour</li>
+        <li>start bug fixed</li>
+        <li>style update</li>
+    </ul>
 
 
     </main>
